@@ -579,26 +579,25 @@ namespace MonoDevelop.CSharp.Resolver
 			
 			ResolveResult targetResult = Resolve (invocationExpression.TargetObject);
 			targetResult.StaticResolve = false; // invocation result is never static
-			
-			if (targetResult is ThisResolveResult && this.resolver.CallingType != null) {
-				targetResult = new MethodResolveResult (this.resolver.CallingType.Methods.Where (method => method.IsConstructor));
-				((MethodResolveResult)targetResult).Type = this.resolver.CallingType;
-				targetResult.CallingType   = resolver.CallingType;
-				targetResult.CallingMember = resolver.CallingMember;
-			}
-			
-			if (targetResult is BaseResolveResult && this.resolver.CallingType != null) {
-				System.Collections.IEnumerable baseConstructors = null;
-				foreach (IType baseType in resolver.Dom.GetInheritanceTree (this.resolver.CallingType)) {
-					if (baseType.DecoratedFullName == this.resolver.CallingType.DecoratedFullName || baseType.ClassType == MonoDevelop.Projects.Dom.ClassType.Interface)
-						continue;
-					baseConstructors = baseType.Methods.Where (method => method.IsConstructor);
-					break;
+			if (this.resolver.CallingType != null) {
+				if (targetResult is ThisResolveResult) {
+					targetResult = new MethodResolveResult (this.resolver.CallingType.Methods.Where (method => method.IsConstructor));
+					((MethodResolveResult)targetResult).Type = this.resolver.CallingType;
+					targetResult.CallingType   = resolver.CallingType;
+					targetResult.CallingMember = resolver.CallingMember;
+				} else if (targetResult is BaseResolveResult) {
+					System.Collections.IEnumerable baseConstructors = null;
+					foreach (IType baseType in resolver.Dom.GetInheritanceTree (this.resolver.CallingType)) {
+						if (baseType.DecoratedFullName == this.resolver.CallingType.DecoratedFullName || baseType.ClassType == MonoDevelop.Projects.Dom.ClassType.Interface)
+							continue;
+						baseConstructors = baseType.Methods.Where (method => method.IsConstructor);
+						break;
+					}
+					targetResult = new MethodResolveResult (baseConstructors);
+					((MethodResolveResult)targetResult).Type = this.resolver.CallingType;
+					targetResult.CallingType   = resolver.CallingType;
+					targetResult.CallingMember = resolver.CallingMember;
 				}
-				targetResult = new MethodResolveResult (baseConstructors);
-				((MethodResolveResult)targetResult).Type = this.resolver.CallingType;
-				targetResult.CallingType   = resolver.CallingType;
-				targetResult.CallingMember = resolver.CallingMember;
 			}
 			
 			MethodResolveResult methodResult = targetResult as MethodResolveResult;
